# makeabstract

./: pyproject.toml
makeabstract/: makeabstract.ipynb
tests/: test_makeabstract.py
